@@ -1,7 +1,8 @@
 <span tal:define="name name|field.name;
                   css_class css_class|field.widget.css_class;
                   oid oid|field.oid;
-                  style style|field.widget.style"
+                  style style|field.widget.style;
+                  autofocus autofocus|field.autofocus"
       tal:omit-tag="">
     <input type="text"
            name="${name}"
@@ -9,6 +10,7 @@
            data-provide="typeahead"
            tal:attributes="class string: form-control ${css_class or ''};
                            style style;
+                           autofocus autofocus;
                            attributes|field.widget.attributes|{};"
            id="${oid}"/>
     <script tal:condition="field.widget.values" type="text/javascript">
