@@ -2,7 +2,8 @@
       tal:define="oid oid|field.oid;
                   name name|field.name;
                   css_class css_class|field.widget.css_class;
-                  style style|field.widget.style">
+                  style style|field.widget.style;
+                  autofocus autofocus|field.autofocus">
 ${field.start_mapping()}
 <div>
   <input type="password"
@@ -10,6 +11,7 @@ ${field.start_mapping()}
          value="${field.widget.redisplay and cstruct or ''}"
          tal:attributes="class string: form-control ${css_class or ''};
                          style style;
+                         autofocus autofocus;
                          attributes|field.widget.attributes|{};"
          id="${oid}"
          i18n:attributes="placeholder"
