@@ -1,12 +1,14 @@
 <tal:block tal:define="oid oid|field.oid;
                        css_class css_class|field.widget.css_class;
-                       style style|field.widget.style;">
+                       style style|field.widget.style;
+                       autofocus autofocus|field.autofocus">
   ${field.start_mapping()}
   <input type="file" name="upload" id="${oid}"
          tal:attributes="style style;
                          accept accept|field.widget.accept;
                          data-filename cstruct.get('filename');
-                         attributes|field.widget.attributes|{};"/>
+                         attributes|field.widget.attributes|{};
+                         autofocus autofocus"/>
   <input tal:define="uid cstruct.get('uid')"
          tal:condition="uid"
          type="hidden" name="uid" value="${uid}"/>
