@@ -5,7 +5,8 @@
      css_class css_class|field.widget.css_class;
      unicode unicode|str;
      optgroup_class optgroup_class|field.widget.optgroup_class;
-     multiple multiple|field.widget.multiple;"
+     multiple multiple|field.widget.multiple;
+     autofocus autofocus|field.autofocus"
      tal:omit-tag="">
 
    <style>
@@ -30,6 +31,7 @@
           data-placeholder field.widget.placeholder|None;
           multiple multiple;
           style style;
+          autofocus autofocus;
           attributes|field.widget.attributes|{};">
     <tal:loop tal:repeat="item values">
       <optgroup tal:condition="isinstance(item, optgroup_class)"
