@@ -142,6 +142,15 @@
   (The culprit is boostrap commit
   `853b69f <https://github.com/twbs/bootstrap/commit/853b69f2d>`_.)
 
+- Removed deform.js:focusFirstInput()
+  Forms have an optional focus parameter ('on'|'off')
+  'on': if the form contains an input with autofocus='on', that input field 
+        will receive focus.
+  'on': if the form does not contain an input with autofocus='on', the first 
+        input field of the form will receive focus.
+  'off' disables focusing for that form.
+  Default behaviour is 'on' (unchanged).
+
 - Make ``dateinput`` work again by using the fixed name "date" as expected
   by the pstruct schema.  See https://github.com/Pylons/deform/pull/221.
 
